sync of the github version with the one used by customers with php7.0

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "sintattica/atk",
-    "description": "ATK business framework",
-    "homepage": "https://github.com/sintattica/atk",
+    "name": "badpenguin/atk-8",
+    "description": "ATK business framework (PHP 7 version)",
+    "homepage": "https://github.com/badpenguin/atk-8",
     "type": "library",
     "license": "MIT",
     "keywords": ["framework"]
